chore: ws:init bootstrap (Maven wrapper + CLAUDE.md split)